--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -6,7 +6,7 @@ services:
       context: .
     restart: always
     volumes:
-      - staic-data:/vol/web
+      - static-data:/vol/web
     environment:
       - DB_HOST=db
       - DB_NAME=${DB_NAME}
